--- a/index.html
+++ b/index.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>E-School</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/scl-icon.png" type="image/x-icon">
 </head>
 <body>
-    
+    <!-- Navbar -->
+     <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+               <img src="images/ICON/Logo.png" class="w-25 img-fluid" alt="">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="#">Books</a>
+                        <a class="nav-link" href="#courses">Courses</a>
+                        <a class="nav-link" href="#others">Others</a>
+                        <a class="nav-link">Blog</a>
+                        <a class="nav-link sign-in text-white">Sign in</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        
+    </div>
+
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-7 home-page">
+                <h6>Are you ready to learn ?</h6>
+                <h1>Learn with fun<br> on
+                    <span>any schedule</span></h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur<br>
+                adipiscing elit. Varius blandit facilisis quam netus</p>
+                <button class="buy-now-button">Get Started</button>
+            </div>
+            <div class="col-md-5">
+                <img src="images/Photos/Illustration.png" class="w-100" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- Book Section -->
+    <div class="container">
+        <div class="row">
+
+        </div>
+    </div>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>   
 </body>
 </html>
