--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             </div>
         </div>
     </div>
+
     <!-- Book Section -->
+
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -158,7 +160,10 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card course">
+
+                    <!-- course class is for course card -->
+                    
+                    <div class="card course"> 
                         <div class="align-items-center">
                             <img src="images/Photos/Morder psyc.png" class="card-img-top course-image " alt="...">
                         </div>
@@ -203,6 +208,18 @@
                 </div>
             </div>
     </div>
+    <div class="container">
+        <h2 class="testimonial text-center">Testimonial</h2>
+        <div>
+            <img src="images/Photos/Man.png" class="man " alt="">
+        </div>
+        <div class="test-report">
+            <p style="font-family: poppins;">There are many variations of passages of Lorem Ipsum available, but the  
+                majority have suffered alteration in some form, by injected humour,<br>
+                or randomised words which don't look even slightly believable.</p>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
