--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container" id="others">
         <h2 class="testimonial text-center">Testimonial</h2>
         <div>
             <img src="images/Photos/Man.png" class="man" alt="">
