--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
                     </h1>
                     <p>Lorem ipsum dolor sit amet, consectetur<br>
                         adipiscing elit. Varius blandit facilisis quam netus</p>
-                    <button class="started-button" style="font-family: poppins; font-weight: 300;">Get Started</button>
+                    <div class="started-button">
+                        <button>Get Started</button>
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <img src="images/Photos/Illustration.png" class="w-100" alt="">
@@ -165,9 +167,11 @@
                         <button class="buy-course-button">Buy Course</button>
                         <div>
                             <!-- card-icon is of calander icon -->
-                            <img src="images/ICON/calendar.png" class="card-icon" alt="">
-                            <div>
-                                <p>Start 20 April 2022</p>
+                            <div class="course-icon">
+                                <img src="images/ICON/calendar.png" class="card-icon" alt="">
+                                <div>
+                                    <p>Start 20 April 2022</p>
+                                </div>
                             </div>
                             <div class="people-icon">
                                 <img src="images/ICON/people.png" class="d-flex justify-content-end card-icon" alt="">
@@ -191,9 +195,11 @@
                         <h6 class="card-text">Designation</h6>
                         <button class="buy-course-button">Buy Course</button>
                         <div>
-                            <img src="images/ICON/calendar.png" class="card-icon" alt="">
-                            <div>
-                                <p>Start 20 April 2022</p>
+                            <div class="course-icon">
+                                <img src="images/ICON/calendar.png" class="card-icon" alt="">
+                                <div>
+                                    <p>Start 20 April 2022</p>
+                                </div>
                             </div>
                             <div class="people-icon">
                                 <img src="images/ICON/people.png" class="d-flex justify-content-end card-icon" alt="">
@@ -213,9 +219,11 @@
                         <h6 class="card-text">Designation</h6>
                         <button class="buy-course-button">Buy Course</button>
                         <div>
-                            <img src="images/ICON/calendar.png" class="card-icon" alt="">
-                            <div>
-                                <p>Start 20 April 2022</p>
+                            <div class="course-icon">
+                                <img src="images/ICON/calendar.png" class="card-icon" alt="">
+                                <div>
+                                    <p>Start 20 April 2022</p>
+                                </div>
                             </div>
                             <div class="people-icon">
                                 <img src="images/ICON/people.png" class="d-flex justify-content-end card-icon" alt="">
@@ -248,7 +256,7 @@
                             </div>
     
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-8" data-aos="fade-left">
                             <p>There are many variations of passages of Lorem Ipsum available, but the
                                 majority have suffered alteration in some form, by injected humour,
                                 or randomised words which don't look even slightly believable.</p>
