--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
                     </h1>
                     <p>Lorem ipsum dolor sit amet, consectetur<br>
                         adipiscing elit. Varius blandit facilisis quam netus</p>
-                    <div class="started-button">
-                        <button>Get Started</button>
-                    </div>
+                    <button class="started-button" style="font-family: poppins; font-weight: 400;">Get Started</button>
                 </div>
                 <div class="col-md-6">
                     <img src="images/Photos/Illustration.png" class="w-100" alt="">
@@ -256,7 +254,7 @@
                             </div>
     
                         </div>
-                        <div class="col-md-8" data-aos="fade-left">
+                        <div class="col-md-8">
                             <p>There are many variations of passages of Lorem Ipsum available, but the
                                 majority have suffered alteration in some form, by injected humour,
                                 or randomised words which don't look even slightly believable.</p>
@@ -274,10 +272,10 @@
 
     <div class="d-flex justify-content-evenly last-page">
         <div class="description text-white">
-            <p>Millions of people of all ages and from around<br>
+            <p class="mb-4">Millions of people of all ages and from around<br>
                 the world are improving their lives with us</p>
-        </div>
-        <div class=" text-white courses">
+        
+        <div class=" text-white courses mb-4">
             <h5>Courses</h5>
             <li>Graphic Design</li>
             <li>Web Design</li>
@@ -285,7 +283,7 @@
             <li>Marketing</li>
             <li>Engineering</li>
         </div>
-        <div class="text-white courses">
+        <div class="text-white courses mb-4">
             <h5>Terms</h5>
             <li>Graphic Design</li>
             <li>Web Design</li>
@@ -293,13 +291,14 @@
             <li>Marketing</li>
             <li>Engineering</li>
         </div>
-        <div class="text-white courses">
+        <div class="text-white courses mb-4">
             <h6>Useful Links</h6>
             <li>Graphic Design</li>
             <li>Web Design</li>
             <li>Business</li>
             <li>Marketing</li>
             <li>Engineering</li>
+        </div>
         </div>
     </div>
     <p
