--- a/index.html
+++ b/index.html
@@ -270,12 +270,14 @@
     </section>
     <!-- last page -->
 
-    <div class="d-flex justify-content-evenly last-page">
-        <div class="description text-white">
+    <div class=" last-page">
+        <div class="row d-flex justify-content-evenly mx-auto">
+        <div class="description last text-white col-md-3">
             <p class="mb-4">Millions of people of all ages and from around<br>
-                the world are improving their lives with us</p>
+                the world are improving their lives with us</p>   
+            </div>
         
-        <div class=" text-white courses mb-4">
+        <div class=" text-white last courses mb-4  col-md-3">
             <h5>Courses</h5>
             <li>Graphic Design</li>
             <li>Web Design</li>
@@ -283,7 +285,7 @@
             <li>Marketing</li>
             <li>Engineering</li>
         </div>
-        <div class="text-white courses mb-4">
+        <div class="text-white last courses mb-4 col-md-3">
             <h5>Terms</h5>
             <li>Graphic Design</li>
             <li>Web Design</li>
@@ -291,7 +293,7 @@
             <li>Marketing</li>
             <li>Engineering</li>
         </div>
-        <div class="text-white courses mb-4">
+        <div class="text-white last courses col-md-3">
             <h6>Useful Links</h6>
             <li>Graphic Design</li>
             <li>Web Design</li>
@@ -302,7 +304,7 @@
         </div>
     </div>
     <p
-        style="margin: auto; text-align: center; background-color: #282531; color: white; font-family: poppins; padding-bottom: 2%; font-size: 14px; font-weight: 300;">
+        style="margin: auto; text-align: center; background-color: #282531; color: white; font-family: poppins; padding-bottom: 2%; font-size: 14px; font-weight: 200;">
         Copyright © 2022 Farhan Hasan Nilok. All right reserved </p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
